# lwp3_gt4-sdk

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  RELEASE_NOTES.txt  next_step.md
examples/: async_control_demo.cpp  hello_gt4.cpp
include/: Lwp3Constants.hpp  Lwp3Gt4.hpp
src/: Lwp3Constants.hpp  Lwp3Gt4.cpp
tests/: async_test.cpp  ble_latency_test.cpp
